keda-http-add-on.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: keda-http-add-on
  labels:
    app.kubernetes.io/part-of: keda-manager
    app.kubernetes.io/managed-by: keda-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-add-on-operator
  namespace: keda-http-add-on
  labels:
    app: http-add-on-operator
    app.kubernetes.io/name: http-add-on-operator
    app.kubernetes.io/part-of: keda-manager
    app.kubernetes.io/managed-by: keda-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-add-on-operator
  template:
    metadata:
      labels:
        app: http-add-on-operator
        app.kubernetes.io/name: http-add-on-operator
        app.kubernetes.io/part-of: keda-manager
        app.kubernetes.io/managed-by: keda-manager
        sidecar.istio.io/inject: "true"
      annotations:
        traffic.sidecar.istio.io/excludeInboundPorts: "9090"
    spec:
      serviceAccountName: http-add-on-operator
      securityContext:
        runAsNonRoot: true
      containers:
        - name: operator
          image: ghcr.io/kedacore/http-add-on-operator:0.9.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: metrics
            - containerPort: 9090
              name: grpc
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 64Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-add-on-interceptor
  namespace: keda-http-add-on
  labels:
    app: http-add-on-interceptor
    app.kubernetes.io/name: http-add-on-interceptor
    app.kubernetes.io/part-of: keda-manager
    app.kubernetes.io/managed-by: keda-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-add-on-interceptor
  template:
    metadata:
      labels:
        app: http-add-on-interceptor
        app.kubernetes.io/name: http-add-on-interceptor
        app.kubernetes.io/part-of: keda-manager
        app.kubernetes.io/managed-by: keda-manager
        sidecar.istio.io/inject: "true"
      annotations:
        traffic.sidecar.istio.io/excludeInboundPorts: "9090"
    spec:
      serviceAccountName: http-add-on-interceptor
      securityContext:
        runAsNonRoot: true
      containers:
        - name: interceptor
          image: ghcr.io/kedacore/http-add-on-interceptor:0.9.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: proxy
            - containerPort: 9090
              name: grpc
            - containerPort: 9091
              name: admin
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 64Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-add-on-external-scaler
  namespace: keda-http-add-on
  labels:
    app: http-add-on-external-scaler
    app.kubernetes.io/name: http-add-on-external-scaler
    app.kubernetes.io/part-of: keda-manager
    app.kubernetes.io/managed-by: keda-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-add-on-external-scaler
  template:
    metadata:
      labels:
        app: http-add-on-external-scaler
        app.kubernetes.io/name: http-add-on-external-scaler
        app.kubernetes.io/part-of: keda-manager
        app.kubernetes.io/managed-by: keda-manager
        sidecar.istio.io/inject: "true"
      annotations:
        traffic.sidecar.istio.io/excludeInboundPorts: "9090"
    spec:
      serviceAccountName: http-add-on-scaler
      securityContext:
        runAsNonRoot: true
      containers:
        - name: scaler
          image: ghcr.io/kedacore/http-add-on-scaler:0.9.0
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
              name: grpc
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: http-add-on-interceptor-proxy
  namespace: keda-http-add-on
  labels:
    app.kubernetes.io/part-of: keda-manager
    app.kubernetes.io/managed-by: keda-manager
spec:
  selector:
    app: http-add-on-interceptor
  ports:
    - name: proxy
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: http-add-on-interceptor-admin
  namespace: keda-http-add-on
  labels:
    app.kubernetes.io/part-of: keda-manager
    app.kubernetes.io/managed-by: keda-manager
spec:
  selector:
    app: http-add-on-interceptor
  ports:
    - name: admin
      port: 9091
      targetPort: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: http-add-on-external-scaler
  namespace: keda-http-add-on
  labels:
    app.kubernetes.io/part-of: keda-manager
    app.kubernetes.io/managed-by: keda-manager
spec:
  selector:
    app: http-add-on-external-scaler
  ports:
    - name: grpc
      port: 9090
      targetPort: 9090
